[package]
name = "bio-rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "解析生物信息领域的基本数据结构，提供操纵这些数据的接口和构建一些统计模型。"
authors = ["Slliu <liushuailong@liushuailong.cn>", "loong <liushuailong001@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "0.11.0"
flate2 = "0.2.20"
csv = "0.15.0"
