[package]
name = "bio-rust"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "解析生物信息领域的基本数据结构，提供操纵这些数据的接口和构建一些统计模型。"
authors = ["Slliu <liushuailong@liushuailong.cn>", "loong <liushuailong001@163.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
flate2 = "0.2.20"
csv = "0.15.0"

[[example]]
name = "sort_vcf"
path = "examples/sort_vcf.rs"
